--- a/F1-main/carreras/carreras.html
+++ b/F1-main/carreras/carreras.html
@@ -85,7 +85,7 @@
             <div class="race">
                 <h2>Round 8</h2>
                 <p class="GP">GP DE MÓNACO</p>
-                <p class="team">Circuit de Monaco</p>
+                <p class="team">Circuit de Montecarlo</p>
                 <img id="logo" src="img/monaco.png" alt="monaco" border="2px solid black">
             </div>
 
@@ -176,7 +176,7 @@
             <div class="race">
                 <h2>Round 21</h2>
                 <p class="GP">GP DE BRASIL</p>
-                <p class="team">Autódromo José Carlos Pace</p>
+                <p class="team">Circuito de Interlagos</p>
                 <img id="logo" src="img/brasil.png" alt="brasil" border="2px solid black">
             </div>
         
